@@ -1,5 +1,8 @@
 Changes with Apache 1.3.22
 
+  *) PORT: Support AtheOS (see www.atheos.cx)
+     [Rodrigo Parra Novo <rodarvus@terra.com.br>]
+
   *) Change to the EXPAT rule logic. We can now use the system's expat
      library if we want, use our own expat-lite or have Configure
      pick one for us (prefer system, but use expat-lite as a backup).
